--- a/package.json
+++ b/package.json
@@ -1,6 +1,34 @@
 {
   "name": "my-rivet-plugin",
+  "packageManager": "yarn@3.5.0",
+  "type": "module",
+  "version": "0.0.1",
+  "main": "test.ts",
   "dependencies": {
     "@ironclad/rivet-core": "^1.15.0"
+  },
+  "files": [
+    "test.ts"
+  ],
+  "scripts": {
+    "build": "tsc -b && tsx bundle.ts",
+    "dev": "run-p watch serve",
+    "watch": "run-p watch:tsc watch:esbuild",
+    "watch:tsc": "tsc -b -w",
+    "watch:esbuild": "tsx bundle.ts --watch",
+    "serve": "serve --config ../serve.json dist"
+  },
+  "devDependencies": {
+    "esbuild": "^0.19.2",
+    "npm-run-all": "^4.1.5",
+    "serve": "^14.2.1",
+    "tsx": "^3.12.10",
+    "typescript": "^5.2.2"
+  },
+  "volta": {
+    "node": "20.6.1"
+  },
+  "rivet": {
+    "skipInstall": true
   }
 }
